mypy_lint_log.txt
src/selectfilecli/file_info.py: note: In member "__iter__" of class "FileInfo":
src/selectfilecli/file_info.py:58: error: Function is missing a type annotation  [no-untyped-def]
        def __iter__(self):
        ^
src/selectfilecli/file_info.py:58: note: See https://mypy.rtfd.io/en/stable/_refs.html#code-no-untyped-def for more info
src/selectfilecli/file_info.py: note: In member "as_tuple" of class "FileInfo":
src/selectfilecli/file_info.py:77: error: Function is missing a return type annotation  [no-untyped-def]
        def as_tuple(self):
        ^
src/selectfilecli/__init__.py: note: In function "select_file":
src/selectfilecli/__init__.py:32: error: Overloaded function signatures 1 and 2 overlap with incompatible return types  [overload-overlap]
    def select_file(
    ^
src/selectfilecli/__init__.py:32: note: Flipping the order of overloads will fix this error
src/selectfilecli/__init__.py:32: note: See https://mypy.rtfd.io/en/stable/_refs.html#code-overload-overlap for more info
